--- a/second_lab.ipynb
+++ b/second_lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOORDiYOzjQNb6o4lgoC4Qh",
+      "authorship_tag": "ABX9TyOOIxL3f7wALbgHjJszT8cU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +28,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ApvlH5qovJ9f",
-        "outputId": "f5617239-b221-439e-8a6e-e83e90773eba"
+        "outputId": "6d7d809f-cbfe-4258-d0c8-36e796c82952"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello Programmer!\n"
+            "30\n"
           ]
         }
       ],
       "source": [
-        "print(\"Hello Programmer!\")"
+        "a=10;\n",
+        "b=20;\n",
+        "sum=a+b;\n",
+        "print(sum);"
       ]
     }
   ]
