--- a/4th_ml_lab.ipynb
+++ b/4th_ml_lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6ySRhzb6jbKZr4n7MB+f4",
+      "authorship_tag": "ABX9TyNK9z+eyEYmVmkEW4BkGQtm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -850,11 +850,11 @@
         "print(regressor.coef_)"
       ],
       "metadata": {
-        "id": "E24wAk1d-52w",
-        "outputId": "9184bc22-16d1-44fd-b723-ac1921bd9623",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "E24wAk1d-52w",
+        "outputId": "9184bc22-16d1-44fd-b723-ac1921bd9623"
       },
       "execution_count": 10,
       "outputs": [
@@ -876,12 +876,12 @@
         "df.head()\n"
       ],
       "metadata": {
-        "id": "lEOMhW_V_SMR",
-        "outputId": "355d68de-c0ca-479a-e0fa-3acbbdd1a4e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "lEOMhW_V_SMR",
+        "outputId": "355d68de-c0ca-479a-e0fa-3acbbdd1a4e7"
       },
       "execution_count": 11,
       "outputs": [
@@ -1168,6 +1168,30 @@
           },
           "metadata": {},
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn import metrics\n",
+        "print('Mean Squared Error:', metrics.mean_squared_error(y_test , y_pred))"
+      ],
+      "metadata": {
+        "id": "vtzwn_zYDQm5",
+        "outputId": "d42daba9-25d6-4e14-ba38-2f88ca0e0214",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Squared Error: 21.598769307217456\n"
+          ]
         }
       ]
     }
